<resources>
	<string name="app_name">Refresh</string>
	<string name="load_ready">准备加载</string>
	<string name="loading">加载中</string>
	<string name="load_complete">加载完成</string>
	<string name="load_failure">加载失败</string>
	<string name="network_error">网络错误，请重试</string>
	<string name="refresh_ready">准备刷新</string>
	<string name="refreshing">刷新中</string>
	<string name="complete_success">请求成功</string>
	<string name="complete_failure">请求失败</string>
	<string name="complete_error">请求错误</string>
	<string name="data_empty">暂无数据~</string>
	<string name="setting">设置</string>
	<string name="refresh_mode">刷新模式</string>
	<string name="load_mode">加载模式</string>
	<string name="auto">auto</string>
	<string name="show">show</string>
	<string name="hide">hide</string>
	<string name="please_enter_the_number_of_data">请输入数据数量</string>
	<string name="please_enter_the_number_of_page">请输入页面数量</string>
	<string name="the_default_number_of_data">10</string>
	<string name="the_default_number_of_page">2</string>
	<string name="whether_to_load_more">是否加载更多</string>
	<string name="confirm">确定</string>
	<string name="force_refresh">强制刷新</string>
	<string name="content">所有神盾局特工注意
\nAttention, all S.H.I.E.L.D agents.
\n
\n我是史蒂夫•罗杰斯
\nThis is Steve Rogers.
\n
\n这几天你们听到了不少我的消息
\nYou\'ve heard a lot about me over the last few days,
\n
\n有些人甚至奉命追捕我
\nsome of you were even ordered to hunt me down.
\n
\n但我认为应该告诉你们真相
\nBut I think it\'s time you know the truth.
\n
\n神盾局并不是我们想象的样子
\nS.H.I.E.L.D is not what we thought it was,
\n
\n它已经被九头蛇渗透了
\nit\'s been taken over by Hydra.
\n
\n他们的首领是亚历山大•皮尔斯
\nAlexander Pierce is their leader.
\n
\n突击队和洞察计划也被渗透了
\nThe S.T.R.I.K.E and Insight crew are Hydra as well.
\n
\n我不知道还有多少  但他们在这里
\nI don\'t know how many more, but I know they\'re in the building.
\n
\n可能就站在你身边
\nThey could be standing right next to you.
\n
\n他们差点如愿以偿  得到绝对控制权
\nThey almost have what they want: absolute control.
\n
\n尼克•弗瑞的被害只是个开始
\nThey shot the Nick Fury and it won\'t end there.
\n
\n如果你们今天发射了直升航母
\nIf you launch those helicarriers today,
\n
\n九头蛇将能够杀死
\nHydra will be able to kill anyone
\n
\n任何妨碍他们计划的人
\nthat stands in their way,
\n
\n除非我们阻止他们
\nunless we stop them.
\n
\n我知道这很难做到
\nI know I\'m asking a lot,
\n
\n但自由的代价一向是高昂的
\nbut the price of freedom is high, it always has been,
\n
\n我愿意付出这代价
\nand it\'s a price I\'m willing to pay.
\n
\n哪怕只有我一个人  我也会坚持到底
\nAnd if I\'m the only one, then so be it.
\n
\n但我相信我不是一个人
\nBut I\'m willing to bet I\'m not.
</string>
</resources>
