<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="cn.shyman.refresh.nested.NestedScrollActivity">
	
	<data>
		
		<import type="android.view.View"/>
		
		<import type="android.view.View.OnClickListener"/>
		
		<variable
			name="refreshReadyClickListener"
			type="OnClickListener"/>
		
		<variable
			name="refreshingClickListener"
			type="OnClickListener"/>
		
		<variable
			name="completeSuccessClickListener"
			type="OnClickListener"/>
		
		<variable
			name="completeFailureClickListener"
			type="OnClickListener"/>
		
		<variable
			name="completeErrorClickListener"
			type="OnClickListener"/>
		
		<variable
			name="forceRefreshClickListener"
			type="OnClickListener"/>
	</data>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		
		<cn.shyman.library.refresh.RefreshLayout
			android:id="@+id/refreshLayout"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1.0"
			app:refresh_statusMode="auto"
			app:refresh_viewHeader="@layout/refresh_basic_header"
			app:refresh_viewStatus="@layout/refresh_basic_status">
			
			<android.support.v4.widget.NestedScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				
				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:lineSpacingExtra="3dp"
					android:padding="15dp"
					android:text="@string/content"
					android:textColor="#333333"
					android:textSize="14sp"/>
			</android.support.v4.widget.NestedScrollView>
		</cn.shyman.library.refresh.RefreshLayout>
		
		<View
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="#EFEFEF"/>
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/white">
			
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:onClick="@{refreshReadyClickListener}"
				android:paddingBottom="14dp"
				android:paddingTop="14dp"
				android:text="@string/refresh_ready"/>
			
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:onClick="@{refreshingClickListener}"
				android:paddingBottom="14dp"
				android:paddingTop="14dp"
				android:text="@string/refreshing"/>
			
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:onClick="@{completeSuccessClickListener}"
				android:paddingBottom="14dp"
				android:paddingTop="14dp"
				android:text="@string/complete_success"/>
			
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:onClick="@{completeFailureClickListener}"
				android:paddingBottom="14dp"
				android:paddingTop="14dp"
				android:text="@string/complete_failure"/>
			
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1.0"
				android:background="?selectableItemBackground"
				android:gravity="center"
				android:onClick="@{completeErrorClickListener}"
				android:paddingBottom="14dp"
				android:paddingTop="14dp"
				android:text="@string/complete_error"/>
		</LinearLayout>
		
		<View
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="#EFEFEF"/>
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@android:color/white"
			android:gravity="center"
			android:onClick="@{forceRefreshClickListener}"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:text="@string/force_refresh"/>
	</LinearLayout>
</layout>
